# krabipqc-rs

./: .pre-commit-config.yaml  CLAUDE.md  EXTERNAL_REVIEW2.md  README.md
.github/workflows/: cortex_m.yml  coverage.yml  riscv.yml  rust.yml
krabipqc/: Cargo.toml
krabipqc/examples/: ml_dsa.rs  ml_kem.rs  print_mont_params.rs  print_vector.rs  print_zetas.rs
krabipqc/src/: blinding.rs  encoding.rs  field.rs  field_ext.rs  hashing.rs  internal.rs  lib.rs  ml_dsa.rs  ml_kem.rs  mont.rs  ntt.rs  params.rs  poly.rs  polyvec.rs  rounding.rs  rustcrypto.rs  sampling.rs
krabipqc/src/mlkem/: encoding.rs  kem.rs  mod.rs  ntt.rs  params.rs  pke.rs  sampling.rs
krabipqc/tests/: kat_keygen.rs  kat_keygen_mldsa44_tc1.txt  kat_keygen_mldsa65_tc26.txt  kat_keygen_mldsa87_tc51.txt  kat_mlkem1024_decaps_tc96.txt  kat_mlkem1024_encaps_tc51.txt  kat_mlkem1024_keygen_tc51.txt  kat_mlkem512_decaps_tc76.txt  kat_mlkem512_encaps_tc1.txt  kat_mlkem512_keygen_tc1.txt  kat_mlkem768_decaps_tc86.txt  kat_mlkem768_encaps_tc26.txt  kat_mlkem768_keygen_tc26.txt  kat_mlkem_encapdecap.rs  kat_mlkem_keygen.rs  kat_siggen.rs  kat_siggen_mldsa44_expected.json  kat_siggen_mldsa44_prompt.json  kat_siggen_mldsa65_expected.json  kat_siggen_mldsa65_prompt.json  kat_siggen_mldsa87_expected.json  kat_siggen_mldsa87_prompt.json  kat_sigver.rs  kat_sigver_mldsa44_expected.json  kat_sigver_mldsa44_prompt.json  kat_sigver_mldsa65_expected.json  kat_sigver_mldsa65_prompt.json  kat_sigver_mldsa87_expected.json  kat_sigver_mldsa87_prompt.json
krabipqc_cortex_m3/: Cargo.toml  build.rs  memory_cm3.x  run_suite.py  test_vector_data.rs
krabipqc_cortex_m3/.cargo/: config.toml
krabipqc_cortex_m3/examples/: ml_dsa_44_sign_stack.rs  ml_dsa_44_verify.rs  ml_dsa_44_verify_stack.rs  ml_dsa_65_sign_stack.rs  ml_dsa_65_verify_stack.rs  ml_dsa_87_sign_stack.rs  ml_dsa_87_verify_stack.rs  ml_kem_1024_decaps_stack.rs  ml_kem_512_decaps_stack.rs  ml_kem_768_decaps_stack.rs  sanity.rs
krabipqc_cortex_m3/src/: cyclecount.rs  lib.rs  stack.rs  test_vector.rs
krabipqc_riscv32/: Cargo.toml  build.rs  memory.x  qemu_wrapper.py  run_suite.py
krabipqc_riscv32/.cargo/: config.toml
krabipqc_riscv32/examples/: ml_dsa_44_sign_stack.rs  ml_dsa_44_verify_stack.rs  ml_dsa_65_sign_stack.rs  ml_dsa_65_verify_stack.rs  ml_dsa_87_sign_stack.rs  ml_dsa_87_verify_stack.rs  ml_kem_1024_decaps_stack.rs  ml_kem_512_decaps_stack.rs  ml_kem_768_decaps_stack.rs
krabipqc_riscv32/src/: cyclecount.rs  lib.rs  stack.rs  test_vector.rs  uart.rs
