[package]
name = "krabipqc"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Prototype of no_std pqc"
repository = "https://github.com/kaidokert/krabipqc-rs"
readme = "../README.md"
keywords = ["crypto", "post-quantum", "ml-dsa", "ml-kem", "no_std"]
categories = ["cryptography", "no-std", "no-std::no-alloc"]

[dependencies]
# All Z_q arithmetic flows through modmath.
modmath = { version = "0.3.1", features = ["wide-mul", "zeroize"] }

# SHAKE-128 / SHAKE-256 / SHA3-256 / SHA3-512 wrappers in `hashing.rs`.
sha3 = { version = "0.10", default-features = false }

# `Personality` marker types (`Nct` / `Ct`). Zeroize feature on so
# transitively-held `FixedUInt` buffers in the wide-mul path clear on
# drop.
fixed-bigint = { version = "0.3", default-features = false, features = ["zeroize"] }

# Constant-time primitives for the Ct personality.
subtle = { version = "2.6", default-features = false }

zeroize = { version = "1", default-features = false }

rand_core = { version = "0.10", default-features = false }

[dev-dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
