[package]
name = "krabipqc"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Prototype of no_std pqc"
repository = "https://github.com/kaidokert/krabipqc-rs"
readme = "../README.md"
keywords = ["crypto", "post-quantum", "ml-dsa", "ml-kem", "no_std"]
categories = ["cryptography", "no-std", "no-std::no-alloc"]

[dependencies]
# All Z_q arithmetic flows through modmath.
modmath = { version = "0.3.1", features = ["wide-mul", "zeroize"] }

# SHAKE-128 / SHAKE-256 / SHA3-256 / SHA3-512 wrappers in `hashing.rs`.
sha3 = { version = "0.10", default-features = false }

# `Personality` marker types (`Nct` / `Ct`). Zeroize feature on so
# transitively-held `FixedUInt` buffers in the wide-mul path clear on
# drop.
fixed-bigint = { version = "0.3", default-features = false, features = ["zeroize"] }

# Constant-time primitives for the Ct personality.
subtle = { version = "2.6", default-features = false }

zeroize = { version = "1", default-features = false }

rand_core = { version = "0.10", default-features = false }

# RustCrypto trait crates (kem::Kem / signature::{Signer, Verifier, ...}).
# Unconditional: interop with the broader RustCrypto ecosystem is the
# default expectation for a public-release PQC crate. Adds ~252 bytes
# of .text on cortex-m3 after DCE.
kem = "0.3"
signature = { version = "3", default-features = false, features = ["rand_core"] }
# Direct dep with `zeroize` feature so the `Array<u8, N>` storage in
# the trait wrappers gets `Zeroize` — kem's `crypto-common` alias
# doesn't forward a zeroize feature, so we pin it ourselves. The
# `extra-sizes` feature unlocks the U800 / U1184 / U1568 / U1632 /
# U2400 / U2420 / U3168 / U3309 / U4032 / U4627 / U4896 sizes used by
# the per-set parameter sets.
hybrid-array = { version = "0.4", features = ["zeroize", "extra-sizes"] }

[dev-dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
