[package]
name = "krabipqc"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Prototype of no_std pqc"
repository = "https://github.com/kaidokert/krabipqc-rs"
readme = "../README.md"
keywords = ["crypto", "post-quantum", "ml-dsa", "ml-kem", "no_std"]
categories = ["cryptography", "no-std", "no-std::no-alloc"]

[features]
# Exposes sign_msg_repr / verify_msg_repr for ACVP vector validation.
# Enable with --features acvp when running the kat_siggen / kat_sigver
# test suites or the print_vector example.
acvp = []

# Stack-for-cycles trade on the ML-DSA sign path. Off: s1_hat / s2_hat
# / t0_hat persist in NTT+Mont form across the kappa loop (cycle-
# optimized). On: they stay encoded in `sk`, re-decoded + re-NTT'd one
# row at a time per retry — saves the three PolyVecs at the cost of
# repeating that work on every rejection. Pick it only where SRAM is
# the binding constraint; the cost scales with the retry rate.
lowmem = []

[dependencies]
# All Z_q arithmetic flows through modmath.
modmath = { version = "0.3.1", features = ["wide-mul", "zeroize"] }

# SHAKE-128 / SHAKE-256 / SHA3-256 / SHA3-512 wrappers in `hashing.rs`.
sha3 = { version = "0.10", default-features = false }

# `Personality` marker types (`Nct` / `Ct`). Zeroize feature on so
# transitively-held `FixedUInt` buffers in the wide-mul path clear on
# drop.
fixed-bigint = { version = "0.3", default-features = false, features = ["zeroize"] }

# Constant-time primitives for the Ct personality.
subtle = { version = "2.6", default-features = false }

zeroize = { version = "1", default-features = false }

rand_core = { version = "0.10", default-features = false }

# DER-encoded OIDs for the FIPS 204 §5.4 HashML-DSA pre-hash selectors.
const-oid = { version = "0.10", default-features = false, features = ["db"] }

# RustCrypto trait crates (kem::Kem / signature::{Signer, Verifier, ...}).
# Unconditional: interop with the broader RustCrypto ecosystem is the
# default expectation for a public-release PQC crate. Adds ~252 bytes
# of .text on cortex-m3 after DCE.
kem = { version = "0.3", default-features = false }
signature = { version = "3", default-features = false, features = ["rand_core"] }
# Direct dep with `zeroize` feature so the `Array<u8, N>` storage in
# the trait wrappers gets `Zeroize` — kem's `crypto-common` alias
# doesn't forward a zeroize feature, so we pin it ourselves. The
# `extra-sizes` feature unlocks the U800 / U1184 / U1568 / U1632 /
# U2400 / U2420 / U3168 / U3309 / U4032 / U4627 / U4896 sizes used by
# the per-set parameter sets.
hybrid-array = { version = "0.4", features = ["zeroize", "extra-sizes"] }

[[example]]
name = "print_vector"
required-features = ["acvp"]

[dev-dependencies]
kem = { version = "0.3", features = ["getrandom"] }
getrandom = { version = "0.4", features = ["sys_rng"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
